<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar_include">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/VCMI.Text.Header"
                android:text="@string/app_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/about_version_app"
                style="@style/VCMI.Text"
                android:text="@string/about_version_app" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/about_version_launcher"
                style="@style/VCMI.Text"
                android:text="@string/about_version_launcher" />
        </LinearLayout>

        <include layout="@layout/inc_separator" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/VCMI.Text.LauncherSection"
            android:text="@string/about_section_project" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_link_portal"
            style="@style/VCMI.Entry.Clickable.AboutSimpleEntry"
            android:text="@string/about_links_main" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_link_repo_main"
            style="@style/VCMI.Entry.Clickable.AboutSimpleEntry"
            android:text="@string/about_links_repo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_link_repo_launcher"
            style="@style/VCMI.Entry.Clickable.AboutSimpleEntry"
            android:text="@string/about_links_repo_launcher" />

        <include layout="@layout/inc_separator" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/VCMI.Text.LauncherSection"
            android:text="@string/about_section_legal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_btn_authors"
            style="@style/VCMI.Entry.Clickable.AboutSimpleEntry"
            android:text="@string/about_btn_authors" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_btn_libs"
            style="@style/VCMI.Entry.Clickable.AboutSimpleEntry"
            android:text="@string/about_btn_libs" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_btn_privacy"
            style="@style/VCMI.Entry.Clickable.AboutSimpleEntry"
            android:text="@string/about_btn_privacy" />
    </LinearLayout>
</ScrollView>